--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<marquee>
+        <h1>Welcome to Accio Jobs!</h1>
+    </marquee>
+
+    <h1><a href="Accio Job's Blog">Blog</a></h1>
+  
+    <img src="https://images.unsplash.com/photo-1594819197857-12a3822df06d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8QnJ1dGUlMjBGb3JjZSUyMHZzLiUyME9wdGltaXphdGlvbnxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" height="200px">
+    
+    <h1><a href="Brute Force vs. Optimization">	Brute Force vs. Optimization</a></h1>
+
+    <p><a href="Brute Force vs. Optimization">We can say that optimization is one step further than the brute-force method of problem solving...</a></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
